--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.cdt.root</name>
+	<name>org.openhwgroup.corev.ide.root</name>
 	<comment></comment>
 	<projects>
 	</projects>
