--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.openhwgroup.corev.ide.cdt</groupId>
-	<artifactId>org.openhwgroup.corev.ide.cdt.root</artifactId>
+	<groupId>org.openhwgroup.corev.ide</groupId>
+	<artifactId>org.openhwgroup.corev.ide.root</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>.\releng\org.openhwgroup.corev.ide.cdt.aggregator</module>
+		<module>.\releng\org.openhwgroup.corev.ide.aggregator</module>
 	</modules>
 
 </project>
