--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -17,8 +17,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.openhwgroup.corev.ide.cdt</groupId>
-	<artifactId>org.openhwgroup.corev.ide.cdt.aggregator</artifactId>
+	<groupId>org.openhwgroup.corev.ide</groupId>
+	<artifactId>org.openhwgroup.corev.ide.aggregator</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
