#6 Provide installable feature to be reused for downstream solutions
Add manifests for org.openhwgroup.corev.ide.feature

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -23,6 +23,7 @@
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>..\..\features\org.openhwgroup.corev.ide.feature</module>
 	</modules>
 
 </project>
