--- a/releng/org.openhwgroup.corev.ide.parent/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.parent/pom.xml
@@ -66,6 +66,28 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<target>
+						<artifact>
+							<groupId>${project.parent.groupId}</groupId>
+							<artifactId>${project.parent.groupId}.target</artifactId>
+							<version>${project.parent.version}</version>
+						</artifact>
+					</target>
+					<environments>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
