--- a/features/org.openhwgroup.corev.ide.feature/feature.properties
+++ b/features/org.openhwgroup.corev.ide.feature/feature.properties
@@ -12,7 +12,7 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-featureName=OpenHW Group Core-V IDE based on Eclipse CDT
+featureName=OpenHW Group Core-V IDE
 providerName=OpenHW Group
 description=OpenHW Group Core-V IDE based on Eclipse CDT
 copyright=Copyright (c) OpenHW Group and others.
