#6 Provide installable feature to be reused for downstream solutions
Add org.openhwgroup.corev.ide.cdt.feature to be reused by downstream

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/.project
+++ b/releng/org.openhwgroup.corev.ide.aggregator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.cdt.aggregator</name>
+	<name>org.openhwgroup.corev.ide.aggregator</name>
 	<comment></comment>
 	<projects>
 	</projects>
