--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -24,6 +24,7 @@
 
 	<modules>
 		<module>..\..\releng\org.openhwgroup.corev.ide.target</module>
+		<module>..\..\features\org.openhwgroup.corev.ide.cdt.feature</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.feature</module>
 		<module>..\..\releng\org.openhwgroup.corev.ide.repository</module>
 	</modules>
