#9 Provide a bundle with product declaration
Add 32x32 branding image

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -15,4 +15,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               ohw32.png
