#9 Provide a bundle with product declaration
Declare product from "org.openhwgroup.corev.ide" bundle.
Provide basic images.

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -16,4 +16,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               ohw32.png
+               ohw32.png,\
+               plugin.xml
