--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -16,5 +16,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               ohw32.png,\
+               images/,\
                plugin.xml
