--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -17,4 +17,7 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                images/,\
-               plugin.xml
+               plugin.xml,\
+               about.ini,\
+               about.mappings,\
+               about.properties
