#13 Change branding to CORE-V IDE
Changed
* "OpenHW IDE" -> "CORE-V IDE"
* "Core-V" -> "CORE-V"

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide/about.properties
+++ b/bundles/org.openhwgroup.corev.ide/about.properties
@@ -11,7 +11,7 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-blurb=OpenHW IDE\n\
+blurb=CORE-V IDE\n\
 \n\
 Version: {featureVersion}\n\
 \n\
