--- a/bundles/org.openhwgroup.corev.ide/plugin.xml
+++ b/bundles/org.openhwgroup.corev.ide/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.ui.ide.workbench"
-            name="OpenHW IDE">
+            name="CORE-V IDE">
          <property
                name="aboutImage"
                value="images\ohw_lg.png">
