--- a/features/org.openhwgroup.corev.ide.cdt.feature/feature.properties
+++ b/features/org.openhwgroup.corev.ide.cdt.feature/feature.properties
@@ -12,7 +12,7 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-featureName=OpenHW Group Core-V IDE CDT
+featureName=OpenHW Group CORE-V IDE CDT
 providerName=OpenHW Group
-description=OpenHW Group Core-V IDE: Eclipse CDT integration
+description=OpenHW Group CORE-V IDE: Eclipse CDT integration
 copyright=Copyright (c) OpenHW Group and others.
