Provide branding images for CORE-V IDE #14
added set of all required icons and implemented app splash pop up

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -20,4 +20,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                about.ini,\
                about.mappings,\
-               about.properties
+               about.properties,\
+               splash.bmp
