--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -34,6 +34,7 @@
 		<module>..\..\releng\org.openhwgroup.corev.ide.repository</module>
 
 		<module>..\..\products\org.openhwgroup.corev.ide.product</module>
+		<module>..\..\features\org.openhwgroup.corev.toolchain</module>
 	</modules>
 
 </project>
