--- a/bundles/org.openhwgroup.corev.toolchain/plugin.xml
+++ b/bundles/org.openhwgroup.corev.toolchain/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 
 <!-- ###############################################################################
-# Copyright (c) Ashling Microsystems and 2020 
+# Copyright (c) Ashling-Microsystems and 2020 
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
