#18 Integrate CORE-V GCC-based toolchain (by Embecsom)
Add placeholder bundle "org.openhwgroup.corev.ide.toolchain.gnu" to use
for toolchain declaration

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -25,6 +25,7 @@
 	<modules>
 		<module>..\..\releng\org.openhwgroup.corev.ide.target</module>
 
+		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.debug.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.cdt.feature</module>
 
