#37 Add about.html to bundles to conform with EPL2.0
Added about.html to all the existing bundles

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide/build.properties
+++ b/bundles/org.openhwgroup.corev.ide/build.properties
@@ -21,4 +21,5 @@ bin.includes = META-INF/,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               splash.bmp
+               splash.bmp,\
+               about.html
