#39 Remove unused java nature from branding bundles
Removed java nature from "org.openhwgroup.corev.ide"
Removed java nature from "org.openhwgroup.corev.ide.toolchain.gnu"
Declare "org.openhwgroup.corev.ide.toolchain.gnu" as branding bundle

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu/build.properties
@@ -11,9 +11,11 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               about.html
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               images/
