#18 Integrate CORE-V GNU-based toolchain (by Embecosm)
Add "org.openhwgroup.corev.ide.toolchain.gnu.ui" bundle

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -27,6 +27,7 @@
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.core</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.toolchain.gnu.feature</module>
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.debug.ui</module>
