--- a/bundles/org.openhwgroup.corev.toolchain/plugin.xml
+++ b/bundles/org.openhwgroup.corev.toolchain/plugin.xml
@@ -3,6 +3,7 @@
 
 <!-- 
 # Copyright (c) Ashling-Microsystems and 2020 
+
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -10,7 +11,8 @@
 #
 # SPDX-License-Identifier: EPL-2.0
 #
-# Contributors: Promodkumar CM  
+# Contributors:
+#     Promodkumar CM
  -->
 
 <plugin>
