License header updated Signed-off-by: Promodkumar CM<promod.kumar@ashling.com>

--- a/bundles/org.openhwgroup.corev.toolchain/plugin.xml
+++ b/bundles/org.openhwgroup.corev.toolchain/plugin.xml
@@ -11,8 +11,7 @@
 #
 # SPDX-License-Identifier: EPL-2.0
 #
-# Contributors:
-#     Promodkumar CM
+# Contributors : Promodkumar CM   
  -->
 
 <plugin>
