--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/build.properties
@@ -17,4 +17,5 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                about.html,\
-               plugin.xml
+               plugin.xml,\
+               templates/
