--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -34,6 +34,7 @@
 		<module>..\..\features\org.openhwgroup.corev.ide.cdt.feature</module>
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.ui.intro</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.feature</module>
 
 		<module>..\..\releng\org.openhwgroup.corev.ide.repository</module>
