--- a/bundles/org.openhwgroup.corev.ide.ui.intro/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.ui.intro/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2020 ArSysOp and others
+# Copyright (c) 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -8,17 +8,13 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
-#     Alexander Fedorov (ArSysOp) - initial API and implementation
+#     Nikifor Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               images/,\
-               plugin.xml,\
-               about.ini,\
-               about.mappings,\
-               about.properties,\
-               splash.bmp,\
                about.html,\
-               plugin_customization.ini
+               plugin.xml
