--- a/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/templates/projects/hello_world_llvm/template.properties
+++ b/bundles/org.openhwgroup.corev.ide.toolchain.gnu.core/templates/projects/hello_world_llvm/template.properties
@@ -12,7 +12,7 @@
 ###############################################################################
 
 #Template Default Values
-hello_corev_c_project_label=Hello World CORE-V C Project
+hello_corev_c_project_label=Hello World CORE-V C LLVM-based Project
 hello_corev_c_project_description=A skeletal Managed C Hello World project for CORE-V. Creates a folder for sources and another for include.
 hello_corev_c_basics.label=Basic Settings
 hello_corev_c_basics_description=Basic properties of a project
@@ -21,3 +21,6 @@ hello_corev_c_author_description=Name of the author
 hello_corev_c_copyright_label=Copyright notice
 hello_corev_c_copyright_description=Your copyright notice
 hello_corev_c_copyright_default=Your copyright notice
+hello_corev_c_version_label=Version name
+hello_corev_c_version_description=Your program version
+hello_corev_c_version_default=1.0.0
