--- a/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
+++ b/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
@@ -13,5 +13,13 @@
 		Nikifor Fedorov (ArSysOp) - initial API and implementation
 -->
 <plugin>
-
+   <extension
+         point="org.eclipse.ui.perspectives">
+      <perspective
+            class="org.openhwgroup.corev.ide.ui.workbench.CoreVPerspective"
+            icon="../org.openhwgroup.corev.ide/images/ohw16.png"
+            id="org.openhwgroup.corev.ide.ui.workbench.perspective"
+            name="CORE-V Development">
+      </perspective>
+   </extension>
 </plugin>
