--- a/bundles/org.openhwgroup.corev.ide/plugin_customization.ini
+++ b/bundles/org.openhwgroup.corev.ide/plugin_customization.ini
@@ -1,2 +1,3 @@
 org.eclipse.ui.intro/INTRO_THEME = org.eclipse.ui.intro.universal.slate
 org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES = overview,tutorials,samples,whatsnew
+org.eclipse.ui/defaultPerspectiveId=org.openhwgroup.corev.ide.ui.workbench.perspective
