#62 Create some help content
Added help content contribution

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.help/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.ui.help/build.properties
@@ -16,4 +16,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               about.html
+               about.html,\
+               toc/,\
+               html/,\
+               plugin.xml
