--- a/bundles/org.openhwgroup.corev.ide.doc.user.help/.project
+++ b/bundles/org.openhwgroup.corev.ide.doc.user.help/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.ui.help</name>
+	<name>org.openhwgroup.corev.ide.doc.user.help</name>
 	<comment></comment>
 	<projects>
 	</projects>
