--- a/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
+++ b/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
@@ -22,4 +22,45 @@
             name="%Perspective-Name">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            allowMultiple="false"
+            category="org.openhwgroup.corev.ide.ui.workbench.category"
+            class="org.eclipse.ui.navigator.CommonNavigator"
+            icon="platform:/plugin/org.openhwgroup.corev.ide/images/ohw16.png"
+            id="org.openhwgroup.corev.ide.ui.workbench.explorer"
+            name="Project Explorer"
+            restorable="true">
+      </view>
+      <category
+            id="org.openhwgroup.corev.ide.ui.workbench.category"
+            name="CORE-V">
+      </category>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.viewer">
+      <viewer
+            viewerId="org.openhwgroup.corev.ide.ui.workbench.explorer">
+      </viewer>
+      <viewerContentBinding
+            viewerId="org.openhwgroup.corev.ide.ui.workbench.explorer">
+         <includes>
+            <contentExtension
+                  pattern="org.eclipse.ui.navigator.resourceContent">
+            </contentExtension>
+            <contentExtension
+                  pattern="org.eclipse.ui.navigator.resources.filters.*">
+            </contentExtension>
+         </includes>
+      </viewerContentBinding>
+      <viewerActionBinding
+            viewerId="org.openhwgroup.corev.ide.ui.workbench.explorer">
+         <includes>
+            <actionExtension
+                  pattern="org.eclipse.ui.navigator.resources.*">
+            </actionExtension>
+         </includes>
+      </viewerActionBinding>
+   </extension>
 </plugin>
