#65 Add CORE-V specific project explorer
renamed abstract node class

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
+++ b/bundles/org.openhwgroup.corev.ide.ui.workbench/plugin.xml
@@ -85,7 +85,7 @@
          <possibleChildren>
             <or>
                <instanceof
-                     value="org.openhwgroup.corev.ide.ui.workbench.meta.Property">
+                     value="org.openhwgroup.corev.ide.ui.workbench.meta.PropertyNode">
                </instanceof>
             </or>
          </possibleChildren>
