#65 Add CORE-V specific project explorer
fixed i18n, removed redundant constants, fixed line endings

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>

--- a/bundles/org.openhwgroup.corev.ide/plugin.xml
+++ b/bundles/org.openhwgroup.corev.ide/plugin.xml
@@ -18,7 +18,7 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.ui.ide.workbench"
-            name="CORE-V IDE">
+            name="%productName">
          <property
                name="aboutImage"
                value="images\ohw_lg.png">
