--- a/features/org.openhwgroup.corev.ide.toolchains.gnu.feature/.project
+++ b/features/org.openhwgroup.corev.ide.toolchains.gnu.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.toolchain.gnu.feature</name>
+	<name>org.openhwgroup.corev.ide.toolchains.gnu.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
