--- a/features/org.openhwgroup.corev.ide.toolchains.gnu.feature/feature.properties
+++ b/features/org.openhwgroup.corev.ide.toolchains.gnu.feature/feature.properties
@@ -1,5 +1,6 @@
+#Properties file for org.openhwgroup.corev.ide.toolchains.gnu.feature
 ###############################################################################
-# Copyright (c) 2020 ArSysOp and others
+# Copyright (c) 2020, 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -11,5 +12,7 @@
 #     Alexander Fedorov (ArSysOp) - initial API and implementation
 ###############################################################################
 
-bin.includes = feature.xml,\
-               feature.properties
+featureName=OpenHW Group CORE-V IDE GNU Toolchains
+providerName=OpenHW Group
+description=OpenHW Group CORE-V IDE : GNU Toolchain support (by Embecosm)
+copyright=Copyright (c) OpenHW Group and others.
