--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	Copyright (c) 2020 ArSysOp and others
+	Copyright (c) 2020, 2021 ArSysOp and others
 
 	This program and the accompanying materials are made available under the
 	terms of the Eclipse Public License 2.0 which is available at
@@ -28,7 +28,7 @@
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.core</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.ui</module>
-		<module>..\..\features\org.openhwgroup.corev.ide.toolchain.gnu.feature</module>
+		<module>..\..\features\org.openhwgroup.corev.ide.toolchains.gnu.feature</module>
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.debug.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.cdt.feature</module>
