#73 Allocate "toolchains" namespace
Repackage org.openhwgroup.corev.ide.toolchain.gnu to
org.openhwgroup.corev.ide.toolchains.gnu

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -25,7 +25,7 @@
 	<modules>
 		<module>..\..\releng\org.openhwgroup.corev.ide.target</module>
 
-		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.core</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.toolchains.gnu.feature</module>
