#73 Allocate "toolchains" namespace
Repackage org.openhwgroup.corev.ide.toolchain.gnu.core to
org.openhwgroup.corev.ide.toolchains.gnu.core

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.toolchains.gnu.core/.project
+++ b/bundles/org.openhwgroup.corev.ide.toolchains.gnu.core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.toolchain.gnu.core</name>
+	<name>org.openhwgroup.corev.ide.toolchains.gnu.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
