--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -26,7 +26,7 @@
 		<module>..\..\releng\org.openhwgroup.corev.ide.target</module>
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu</module>
-		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.core</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu.core</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.toolchains.gnu.feature</module>
 
