--- a/bundles/org.openhwgroup.corev.ide.toolchains.gnu.ui/.project
+++ b/bundles/org.openhwgroup.corev.ide.toolchains.gnu.ui/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhwgroup.corev.ide.toolchain.gnu.ui</name>
+	<name>org.openhwgroup.corev.ide.toolchains.gnu.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
