--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -27,7 +27,7 @@
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu.core</module>
-		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchain.gnu.ui</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.toolchains.gnu.ui</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.toolchains.gnu.feature</module>
 
 		<module>..\..\bundles\org.openhwgroup.corev.ide.debug.ui</module>
