--- a/releng/org.openhwgroup.corev.ide.parent/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.parent/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	Copyright (c) 2020 ArSysOp and others
+	Copyright (c) 2020, 2021 ArSysOp and others
 
 	This program and the accompanying materials are made available under the
 	terms of the Eclipse Public License 2.0 which is available at
@@ -306,7 +306,7 @@
 						<configuration>
 							<excludes>
 								<plugin id="org.openhwgroup.corev.ide" />
-								<plugin id="org.openhwgroup.corev.ide.toolchain.gnu" />
+								<plugin id="org.openhwgroup.corev.ide.toolchains.gnu" />
 							</excludes>
 						</configuration>
 					</execution>
