--- a/bundles/org.openhwgroup.corev.ide.ui.workbench/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.ui.workbench/build.properties
@@ -17,4 +17,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                about.html,\
-               plugin.xml
+               plugin.xml,\
+               images/
+
