--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,4 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Build with Maven
-      run: mvn clean verify --no-transfer-progress -U -Dbuild.label=0.1.0
+      run: mvn clean verify --no-transfer-progress -U
