--- a/bundles/org.openhwgroup.corev.ide/about.properties
+++ b/bundles/org.openhwgroup.corev.ide/about.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2020 ArSysOp and others
+# Copyright (c) 2020, 2021 ArSysOp and others
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -15,9 +15,9 @@ blurb=CORE-V IDE\n\
 \n\
 Version: {featureVersion}\n\
 \n\
-(c) Copyright OpenHW Group and others 2020. \n\
+(c) Copyright OpenHW Group and others 2020, 2021. \n\
 Visit https://www.openhwgroup.org/ \n\
 \n\
- This product includes software developed by Eclipse Foundation, https://www.eclipse.org/.\n\
+This product includes software developed by Eclipse Foundation, https://www.eclipse.org/.\n\
 \n\
 This product includes software developed by other open source projects including the Apache Software Foundation, https://www.apache.org/.\n
