Override p2 policy for CORE-V IDE #91
Add org.openhwgroup.corev.ide.p2.ui bundle

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
+++ b/releng/org.openhwgroup.corev.ide.aggregator/pom.xml
@@ -40,6 +40,7 @@
 		<module>..\..\bundles\org.openhwgroup.corev.ide.ui.workbench</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.definition</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.definition.ui</module>
+		<module>..\..\bundles\org.openhwgroup.corev.ide.p2.ui</module>
 		<module>..\..\bundles\org.openhwgroup.corev.ide.seal</module>
 		<module>..\..\features\org.openhwgroup.corev.ide.feature</module>
 
