Override p2 policy for CORE-V IDE #91
remove empty images folder

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>

--- a/bundles/org.openhwgroup.corev.ide.p2.ui/build.properties
+++ b/bundles/org.openhwgroup.corev.ide.p2.ui/build.properties
@@ -17,6 +17,5 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                about.html,\
-               plugin.xml,\
-               images/
+               plugin.xml
 
