--- a/products/org.openhwgroup.corev.ide.product/pom.xml
+++ b/products/org.openhwgroup.corev.ide.product/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	Copyright (c) 2020 ArSysOp and others
+	Copyright (c) 2020, 2022 ArSysOp and others
 
 	This program and the accompanying materials are made available under the
 	terms of the Eclipse Public License 2.0 which is available at
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.openhwgroup.corev.ide</groupId>
 		<artifactId>org.openhwgroup.corev.ide.parent</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 		<relativePath>../../releng/org.openhwgroup.corev.ide.parent</relativePath>
 	</parent>
 
